Refactored some redundant code and add sfw option

--- a/someurls.html
+++ b/someurls.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html> <html> <body> 
- <img src="http://i.imgur.com/2n0xK.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/BKUg8.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/ywvaD.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/r1UCP.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/aPbzK.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/rjTca.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/CuJZf.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/YmYsO.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/s4Ux9.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/4XFue.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/oVkCq.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/cye8p.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/zuvUS.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/2pWgw.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/z9AZ1.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/hybXY.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/bzxd1.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/hJ0Ts.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/Eu730.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/vrNF0.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/plG96.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/gpZ1i.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/zganX.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/8Om1U.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/QLaE9.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/BQdpz.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/bt6HG.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/gbWUj.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/eO5zU.gif" height="240" width="240"> 
- <img src="http://i.imgur.com/TqVSe.gif" height="240" width="240"> 
+ <img src="http://i.imgur.com/6Wcuc.gif" height="240" width="240">
+ <img src="http://i.imgur.com/4UTuJ.gif" height="240" width="240">
+ <img src="http://i.imgur.com/YEGf3.gif" height="240" width="240">
+ <img src="http://i.imgur.com/fu4Wj.gif" height="240" width="240">
+ <img src="http://i.imgur.com/1wcHX.gif" height="240" width="240">
+ <img src="http://i.imgur.com/Q2KVT.gif" height="240" width="240">
+ <img src="http://i.imgur.com/HUOpk.gif" height="240" width="240">
+ <img src="http://i.imgur.com/y6d0d.gif" height="240" width="240">
+ <img src="http://i.imgur.com/0eJ0U.gif" height="240" width="240">
+ <img src="http://i.imgur.com/7H95F.gif" height="240" width="240">
+ <img src="http://i.imgur.com/DOc1i.gif" height="240" width="240">
+ <img src="http://i.imgur.com/9g7kP.gif" height="240" width="240">
+ <img src="http://i.imgur.com/ozwMZ.gif" height="240" width="240">
+ <img src="http://i.imgur.com/Gx8mW.gif" height="240" width="240">
+ <img src="http://i.imgur.com/UmSz9.gif" height="240" width="240">
+ <img src="http://i.imgur.com/eN6ZS.gif" height="240" width="240">
+ <img src="http://i.imgur.com/H2wir.gif" height="240" width="240">
+ <img src="http://i.imgur.com/NzNmU.gif" height="240" width="240">
+ <img src="http://i.imgur.com/0QCAc.gif" height="240" width="240">
+ <img src="http://i.imgur.com/5y0On.gif" height="240" width="240">
+ <img src="http://i.imgur.com/cY19b.gif" height="240" width="240">
+ <img src="http://i.imgur.com/LExen.gif" height="240" width="240">
+ <img src="http://i.imgur.com/4Hv4n.gif" height="240" width="240">
+ <img src="http://i.imgur.com/xpLKJ.gif" height="240" width="240">
+ <img src="http://i.imgur.com/fKkyR.gif" height="240" width="240">
+ <img src="http://i.imgur.com/5JwLG.gif" height="240" width="240">
+ <img src="http://i.imgur.com/dqblu.gif" height="240" width="240">
+ <img src="http://i.imgur.com/DPMlz.gif" height="240" width="240">
+ <img src="http://i.imgur.com/0Uvdm.gif" height="240" width="240">
+ <img src="http://i.imgur.com/u6MRO.gif" height="240" width="240">
 </body> </html>
